Sidebar content changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,28 +9,26 @@
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <nav class="sidebar-nav">
+    <nav class="sidebar-nav" aria-label="Primary">
+      <p class="sidebar-nav-label">Explore</p>
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
+      {% assign pages_list = site.pages | sort: "title" %}
       {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
+        {% if node.title and node.layout == "page" %}
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endfor %}
-
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <div class="sidebar-meta">
+      {% if site.author.email %}
+      <a class="sidebar-meta-link" href="mailto:{{ site.author.email }}">Email</a>
+      {% endif %}
+      {% if site.url %}
+      <a class="sidebar-meta-link" href="{{ site.url }}">{{ site.url | replace: "https://", "" | replace: "http://", "" }}</a>
+      {% endif %}
+      <p class="sidebar-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
+    </div>
   </div>
 </div>
