Set email and removed redundant link from sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
       <a class="sidebar-meta-link" href="mailto:{{ site.author.email }}">Email</a>
       {% endif %}
       {% if site.url %}
-      <a class="sidebar-meta-link" href="{{ site.url }}">{{ site.url | replace: "https://", "" | replace: "http://", "" }}</a>
+      <!-- <a class="sidebar-meta-link" href="{{ site.url }}">{{ site.url | replace: "https://", "" | replace: "http://", "" }}</a> -->
       {% endif %}
       <p class="sidebar-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
     </div>
