--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,10 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell@v1.0.3/nutshell.js"></script>
+  <script>
+    Nutshell.setOptions({
+      dontEmbedHeadings: true
+    });
+  </script>
+
 </head>
