Refined Sidebar and added animations.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar" id="site-sidebar">
+<aside class="sidebar" id="site-sidebar" aria-label="Site sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
@@ -31,4 +31,4 @@
       <p class="sidebar-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
     </div>
   </div>
-</div>
+</aside>
