--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,17 @@
   <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell@v1.0.8/nutshell.js"></script>
   <script>
     Nutshell.setOptions({
-      dontEmbedHeadings: true
+      dontEmbedHeadings: true,
+      startOnLoad: false
     });
+
+    if (document.readyState === "loading") {
+      document.addEventListener("DOMContentLoaded", function () {
+        Nutshell.start();
+      }, { once: true });
+    } else {
+      Nutshell.start();
+    }
   </script>
 
 </head>
